adding extraodinary view

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Oval rental
       <div id="content">
         <div class="desc">
           <div class="part-header pd32">
-            <p>location</p>
+            <p>New experience now!</p>
           </div>
           <div class="illustrate">
             <p>
@@ -131,31 +131,50 @@ Oval rental
               old town.
             </p>
           </div>
-          <p class="embedded-map">
-            <iframe
-              class="map-frame"
-              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3724.2480167702565!2d105.847229!3d21.022760000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab93d06bf0e9%3A0x5630d4b7aee3a42d!2zQ2FwaXRhbCBCdWlsZGluZywgNzIgVHLhuqduIEjGsG5nIMSQ4bqhbywgSG_DoG4gS2nhur9tLCBIw6AgTuG7mWksIFZpZXRuYW0!5e0!3m2!1sen!2sus!4v1654012677124!5m2!1sen!2sus"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </p>
-        </div>
-        <div class="desc">
-          <div class="part-header pd32">
-            <p>New experience now!</p>
+          <div class="possession-list row">
+            <div class="possession-item col-lg-4 col-12">
+              <div class="possession">
+                <img src="./assets/img/Experience_img/beautiful_view.jpg" alt="" class="possession-img">
+                <div class="possession-container">
+                  <p class="possession-text">
+                    Name
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="possession-item col-lg-4 col-12">
+              <div class="possession">
+                <img src="./assets/img/Experience_img/beautiful_view1.png" alt="" class="possession-img">
+                <div class="possession-container">
+                  <p class="possession-text">
+                    Name
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="possession-item col-lg-4 col-12">
+              <div class="possession">
+                <img src="./assets/img/Experience_img/beautiful_view2.jpg" alt="" class="possession-img">
+                <div class="possession-container">
+                  <p class="possession-text">
+                    Name
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
         <!-- Begin: Book section -->
         <div class="reserve">
           <div class="part-header pd32">
-            <p>Our product</p>
+            <p>ROOMS & SUITES</p>
           </div>
-
+          <div class="illustrate">
+            <p>
+              Spread over two interconnected buildings, Oval Rentals offers 30 double, and 5 single rooms as well as 36 suites and junior suites. Families can enjoy some privacy thanks to interconnecting rooms or in our generous Family Suite with the view of Hoan Kiem Lake on the top floor. Since our last renovation in 2018, all of our rooms feature elegant wooden parquet flooring. From the balconies, visitors can admire the hustle and bustle of Hanoi, which is often seen in this place. All of our accommodation options comprise luxury amenities such as tea & coffee makers, minibars, flat screen televisions, fluffy bathrobes and slippers, hair dryers, and exclusive Pure Altitude toiletries.
+            </p>
+          </div>
           <!-- Begin: Room list -->
           <div class="reserve-content">
             <div class="row">
