--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -102,7 +102,7 @@ Oval rental
       <div class="reserve">
 
         <div class="part-header pd32">
-          <p>Our product</p>
+          <p>ROOMS & SUITES</p>
         </div>
 
         <!-- Begin: Room list -->
