--- a/index.html
+++ b/index.html
@@ -137,8 +137,12 @@ Oval rental
                 <img src="./assets/img/Experience_img/beautiful_view.jpg" alt="" class="possession-img">
                 <div class="possession-container">
                   <p class="possession-text">
-                    Name
+                    If you love us,vote for us
                   </p>
+                  <p class="possession-subtitle">
+                    If you love us, please take a moment to vote for us in the Hotels & Resorts and Your Year in Travel categories.
+                  </p>
+                  <a href="" class="possession-button">Vote for us</a>
                 </div>
               </div>
             </div>
@@ -147,18 +151,26 @@ Oval rental
                 <img src="./assets/img/Experience_img/beautiful_view1.png" alt="" class="possession-img">
                 <div class="possession-container">
                   <p class="possession-text">
-                    Name
+                    Travel with ease
                   </p>
+                  <p class="possession-subtitle">
+                    We are pleased to offer PCR testing in the privacy of our resort, administered by local health professionals.
+                  </p>
+                  <a href="" class="possession-button">Discover more</a>
                 </div>
               </div>
             </div>
             <div class="possession-item col-lg-4 col-12">
               <div class="possession">
-                <img src="./assets/img/Experience_img/beautiful_view2.jpg" alt="" class="possession-img">
+                <img src="./assets/img/Experience_img/Wine.jpg" alt="" class="possession-img">
                 <div class="possession-container">
                   <p class="possession-text">
-                    Name
+                    Wine experience
                   </p>
+                  <p class="possession-subtitle">
+                    Discover our signature wine experiences in the Cape Winelands.
+                  </p>
+                  <a href="" class="possession-button">Discover more</a>
                 </div>
               </div>
             </div>
