Add login/register modal

--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -11,12 +11,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../assets/fonts/stylesheet.css">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/responsive.css">
-
-  <!-- Script -->
-  <script src="../assets/js/reserveScript.js"></script>
+  <link rel="stylesheet" href="../assets/css/footer.css">
 </head>
 
 <body>
@@ -37,17 +36,11 @@
       <!-- Ending a list -->
 
       <!-- Begin: login and register button -->
-      <ul class="login-button">
-        <li class="nav-login">
-          <a href="">Login</a>
-        </li>
-        <li class="nav-bracket">
-          <a href="">|</a>
-        </li>
-        <li class="nav-register">
-          <a href="">Register</a>
-        </li>
-      </ul>
+      <div id="lgBtn">
+        <p>
+          Login | Register
+        </p>
+      </div>
       <!-- End: login and register button -->
     </div>
     <!-- End: header -->
@@ -178,7 +171,7 @@ Oval rental
         </div>
         <!-- End: Room list -->
         <!-- Begin: Form section -->
-        <div class="booking-section">
+        <div class="booking-section mgtb32">
           <div class="part-header pd32">
             <p>Let's go!</p>
             <a id="bk-st"></a>
@@ -236,11 +229,119 @@ Oval rental
     </div>
     <!-- End: Book section -->
 
+    <!-- map -->
+    <p class="embedded-map">
+      <iframe class="map-frame"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3724.2480167702565!2d105.847229!3d21.022760000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab93d06bf0e9%3A0x5630d4b7aee3a42d!2zQ2FwaXRhbCBCdWlsZGluZywgNzIgVHLhuqduIEjGsG5nIMSQ4bqhbywgSG_DoG4gS2nhur9tLCBIw6AgTuG7mWksIFZpZXRuYW0!5e0!3m2!1sen!2sus!4v1654012677124!5m2!1sen!2sus"
+        width="100%" height="450" style="border: 0;
+          width: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </p>
+
+    <!-- footer -->
     <div id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col col-sm-6 col-lg-3">
+            <div class="container-about-logo ">
+              <a href="#">
+                <img src="../assets/img/Logo/logo1.webp" alt="logo" class="img-logo">
+                <p>Oval Rental</p>
+              </a>
+            </div>
+            <div class="container-about-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vivamus quis vu lputate eros, iaculis consequat nisl.
+                Nunc et suscipit urna. Integer eleme ntum orci eu vehicula pretium.</p>
+            </div>
+            <div class="social-list">
+              <a href="#"><i class="bi bi-pinterest"></i></a>
+              <a href="#"><i class="bi bi-facebook"></i></a>
+              <a href="#"><i class="bi bi-twitter"></i></a>
+              <a href="#"><i class="bi bi-globe2"></i></a>
+              <a href="#"><i class="bi bi-github"></i></a>
+            </div>
+          </div>
+          <div class="col col-sm-6 col-lg-3">
+            <h2>Blog Posts</h2>
+            <div class="container-blog">
+              <img src="../assets/img/Room/affordableRoom.jpg" alt="">
+              <div class="container-blog-item">
+                <h4>Travel with us this year</h4>
+                <p>July 20, 2021</p>
+              </div>
+            </div>
+            <div class="container-blog">
+              <img src="../assets/img/Room/doubleRoom.jpg" alt="">
+              <div class="container-blog-item">
+                <h4>New destinations for you</h4>
+                <p>July 20, 2021</p>
+              </div>
+            </div>
+            <div class="container-blog">
+              <img src="../assets/img/Room/SingleRoom.jpg" alt="">
+              <div class="container-blog-item">
+                <h4>Travel with us this year</h4>
+                <p>July 20, 2021</p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-sm-6 col-lg-3">
+            <h2>Tags</h2>
+            <div class="container-tag">
+              <ul>
+                <li>
+                  <a href="#">design</a>
+                </li>
+                <li>
+                  <a href="#">fashion</a>
+                </li>
+                <li>
+                  <a href="#">music</a>
+                </li>
+                <li>
+                  <a href="#">video</a>
+                </li>
+                <li>
+                  <a href="#">party</a>
+                </li>
+                <li>
+                  <a href="#">photography</a>
+                </li>
+                <li>
+                  <a href="#">adventure</a>
+                </li>
+                <li>
+                  <a href="#">travel</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col col-sm-6 col-lg-3">
+            <h2> CONTACT INFO </h2>
+            <div class="container-contact-info">
+              <i class="bi bi-hospital"></i>
+              <span> 175 Tây Sơn Đống Đa Hà Nội </span>
+            </div>
+            <div class="container-contact-info">
+              <i class="bi bi-telephone"></i>
+              <span> 0828807783 </span>
+            </div>
+            <div class="container-contact-info">
+              <i class="bi bi-envelope"></i>
+              <span> ovalrental@gmail.com </span>
+            </div>
+            <div class="container-contact-info">
+              <i class="bi bi-google"></i>
+              <span>www.google.com.vn</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
-  </div>
+  <!-- Script -->
+  <script src="../assets/js/reserveScript.js"></script>
 </body>
 
 </html>
