Fix login reserve bug

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div id="order-list">
         <ul class="nav">
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#aboutUs">About</a></li>
           <li><a href="pages/reserve.html#bk-st">Reservation</a></li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
-        <a href="#">About</a>
+        <a href="#aboutUs">About</a>
         <a href="pages/reserve.html#bk-st">Reservation</a>
       </div>
       <span class="drawer" style="font-size: 30px; cursor: pointer" onclick="openNav()">&#9776;
@@ -236,7 +236,7 @@ Oval rental
       </div>
       <!-- End: Book section -->
 
-      <div class="about-us">
+      <div id="aboutUs" class="about-us">
         <div class="part-header pd32">
           <p>About us</p>
           <div class="container">
@@ -390,6 +390,7 @@ Oval rental
       </div>
     </div>
 
+    <!-- Modal -->
     <div id="modal">
       <!-- Login -->
       <div class="modal-login">
@@ -452,9 +453,9 @@ Oval rental
         </div>
       </div>
     </div>
-
-    <script src="assets/js/indexScript.js"></script>
-    <!-- End: main -->
+  </div>
+  <script src="assets/js/indexScript.js"></script>
+  <!-- End: main -->
 </body>
 
 </html>
