--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -29,7 +29,7 @@
       <div id="order-list">
         <ul class="nav">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="../index.html#aboutUs">About</a></li>
           <li><a href="#bk-st">Reservation</a></li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="../index.html">Home</a>
-        <a href="#">About</a>
+        <a href="../index.html#aboutUs">About</a>
         <a href="#bk-st">Reservation</a>
       </div>
       <span class="drawer" style="font-size: 30px; cursor: pointer" onclick="openNav()">&#9776;
@@ -335,6 +335,70 @@ Oval rental
               <span>www.google.com.vn</span>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div id="modal">
+      <!-- Login -->
+      <div class="modal-login">
+        <div class="modal-hd pd16">
+          <h1>Login</h1>
+          <i class="fa-solid fa-xmark pd16"></i>
+        </div>
+        <div class="modal-ct">
+          <form action="">
+            <div class="modal-id col-12 pd16">
+              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Username">
+            </div>
+            <div class="modal-id col-12 pd16">
+              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Password">
+            </div>
+            <div class="modal-id col-12 pd16">
+              <input type="button" class="full-width pd8" value="Submit">
+            </div>
+          </form>
+        </div>
+        <div class="modal-ft">
+          <a href="#" id="rgChange" class="pd16 half-width">
+            Register now
+          </a>
+          <a href="#" class="ForgetPassword pd16 half-width">
+            Forget password
+          </a>
+        </div>
+      </div>
+
+      <!-- Register -->
+      <div class="modal-register">
+        <div class="modal-hd pd16">
+          <h1>Register</h1>
+          <i class="fa-solid fa-xmark pd16"></i>
+        </div>
+        <div class="modal-ct">
+          <form action="">
+            <div class="modal-id col-12 pd16">
+              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Username">
+            </div>
+            <div class="modal-id col-12 pd16">
+              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Password">
+            </div>
+            <div class="modal-id col-12 pd16">
+              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Retype password">
+            </div>
+            <div class="modal-id col-12 pd16">
+              <input type="button" class="full-width pd8" value="Submit">
+            </div>
+          </form>
+        </div>
+        <div class="modal-ft">
+          <a href="#" id="lgChange" class="pd16 half-width">
+            Login
+          </a>
+          <a href="#" class="ForgetPassword pd16 half-width">
+            Forget password
+          </a>
         </div>
       </div>
     </div>
