--- a/index.html
+++ b/index.html
@@ -289,16 +289,10 @@ Oval rental
       </div>
       <!-- End:content -->
       <p class="embedded-map">
-        <iframe
-          class="map-frame"
+        <iframe class="map-frame"
           src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3724.2480167702565!2d105.847229!3d21.022760000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab93d06bf0e9%3A0x5630d4b7aee3a42d!2zQ2FwaXRhbCBCdWlsZGluZywgNzIgVHLhuqduIEjGsG5nIMSQ4bqhbywgSG_DoG4gS2nhur9tLCBIw6AgTuG7mWksIFZpZXRuYW0!5e0!3m2!1sen!2sus!4v1654012677124!5m2!1sen!2sus"
-          width="100%"
-          height="450"
-          style="border: 0; width: 100%"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+          width="100%" height="450" style="border: 0; width: 100%" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </p>
     </div>
     <!-- End:content -->
@@ -474,7 +468,7 @@ Oval rental
       </div>
     </div>
   </div>
-  <script src="assets/js/indexScript.js"></script>
+  <script type="module" src="assets/js/indexScript.js"></script>
   <!-- End: main -->
 </body>
 
