--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oval Rental</title>
-  <link rel="icon" type="image/x-icon" href = "../assets/img/favicon/icons8-hotel-star-64.png">
+  <link rel="icon" type="image/x-icon" href="../assets/img/favicon/icons8-hotel-star-64.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -241,18 +241,21 @@ Oval rental
     <!-- footer -->
     <div id="footer">
       <div class="container">
-        <div class="row">
+        <div class="row rps_footer">
           <div class="col col-sm-6 col-lg-3">
-            <div class="container-about-logo ">
+            <div class="container-about-logo">
               <a href="#">
-                <img src="../assets/img/Logo/logo1.webp" alt="logo" class="img-logo">
+                <img src="../assets/img/Logo/logo1.webp" alt="logo" class="img-logo" />
                 <p>Oval Rental</p>
               </a>
+
             </div>
             <div class="container-about-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Vivamus quis vu lputate eros, iaculis consequat nisl.
-                Nunc et suscipit urna. Integer eleme ntum orci eu vehicula pretium.</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vivamus quis vu lputate eros, iaculis consequat nisl. Nunc et
+                suscipit urna. Integer eleme ntum orci eu vehicula pretium.
+              </p>
             </div>
             <div class="social-list">
               <a href="#"><i class="bi bi-pinterest"></i></a>
@@ -265,21 +268,21 @@ Oval rental
           <div class="col col-sm-6 col-lg-3">
             <h2>Blog Posts</h2>
             <div class="container-blog">
-              <img src="../assets/img/Room/affordableRoom.jpg" alt="">
+              <img src="../assets/img/Room/affordableRoom.jpg" alt="" />
               <div class="container-blog-item">
                 <h4>Travel with us this year</h4>
                 <p>July 20, 2021</p>
               </div>
             </div>
             <div class="container-blog">
-              <img src="../assets/img/Room/doubleRoom.jpg" alt="">
+              <img src="../assets/img/Room/doubleRoom.jpg" alt="" />
               <div class="container-blog-item">
                 <h4>New destinations for you</h4>
                 <p>July 20, 2021</p>
               </div>
             </div>
             <div class="container-blog">
-              <img src="../assets/img/Room/SingleRoom.jpg" alt="">
+              <img src="../assets/img/Room/SingleRoom.jpg" alt="" />
               <div class="container-blog-item">
                 <h4>Travel with us this year</h4>
                 <p>July 20, 2021</p>
@@ -318,7 +321,7 @@ Oval rental
             </div>
           </div>
           <div class="col col-sm-6 col-lg-3">
-            <h2> CONTACT INFO </h2>
+            <h2>CONTACT INFO</h2>
             <div class="container-contact-info">
               <i class="bi bi-hospital"></i>
               <span> 175 Tây Sơn Đống Đa Hà Nội </span>
@@ -351,23 +354,25 @@ Oval rental
         <div class="modal-ct">
           <form action="">
             <div class="modal-id col-12 pd16">
-              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Username">
+              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Username" />
             </div>
             <div class="modal-id col-12 pd16">
-              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Password">
+              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Password" />
             </div>
             <div class="modal-id col-12 pd16">
-              <input type="button" class="full-width pd8" value="Submit">
+              <input type="button" class="full-width pd8" value="Submit" />
             </div>
           </form>
         </div>
         <div class="modal-ft">
-          <a href="#" id="rgChange" class="pd16 half-width">
-            Register now
-          </a>
-          <a href="#" class="ForgetPassword pd16 half-width">
-            Forget password
-          </a>
+          <div class="pd16 half-width">
+            <a href="#" id="rgChange" class="pd16"> Register now </a>
+          </div>
+          <div class="pd16 half-width">
+            <a href="#" class="ForgetPassword pd16">
+              Forget password
+            </a>
+          </div>
         </div>
       </div>
 
@@ -380,33 +385,35 @@ Oval rental
         <div class="modal-ct">
           <form action="">
             <div class="modal-id col-12 pd16">
-              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Username">
+              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Username" />
             </div>
             <div class="modal-id col-12 pd16">
-              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Password">
+              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Password" />
             </div>
             <div class="modal-id col-12 pd16">
-              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Retype password">
+              <input type="text" name="" id="" class="full-width pd8" value="" placeholder="Retype password" />
             </div>
             <div class="modal-id col-12 pd16">
-              <input type="button" class="full-width pd8" value="Submit">
+              <input type="button" class="full-width pd8" value="Submit" />
             </div>
           </form>
         </div>
         <div class="modal-ft">
-          <a href="#" id="lgChange" class="pd16 half-width">
-            Login
-          </a>
-          <a href="#" class="ForgetPassword pd16 half-width">
-            Forget password
-          </a>
+          <div class="pd16 half-width">
+            <a href="#" id="lgChange" class="pd16"> Login </a>
+          </div>
+          <div class="pd16 half-width">
+            <a href="#" class="ForgetPassword pd16">
+              Forget password
+            </a>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
   <!-- Script -->
-  <script src="../assets/js/reserveScript.js"></script>
+  <script type="module" src="../assets/js/reserveScript.js"></script>
 </body>
 
 </html>
