update respon footer

--- a/index.html
+++ b/index.html
@@ -324,25 +324,27 @@ Oval rental
           </div>
           <div class="col col-sm-6 col-lg-3">
             <h2>Blog Posts</h2>
-            <div class="container-blog">
-              <img src="assets/img/Room/affordableRoom.jpg" alt="" />
-              <div class="container-blog-item">
-                <h4>Travel with us this year</h4>
-                <p>July 20, 2021</p>
+            <div class="column-blog">
+              <div class="container-blog">
+                <img src="assets/img/Room/affordableRoom.jpg" alt="" />
+                <div class="container-blog-item">
+                  <h4>Travel with us this year</h4>
+                  <p>July 20, 2021</p>
+                </div>
               </div>
-            </div>
-            <div class="container-blog">
-              <img src="assets/img/Room/doubleRoom.jpg" alt="" />
-              <div class="container-blog-item">
-                <h4>New destinations for you</h4>
-                <p>July 20, 2021</p>
+              <div class="container-blog">
+                <img src="assets/img/Room/doubleRoom.jpg" alt="" />
+                <div class="container-blog-item">
+                  <h4>New destinations for you</h4>
+                  <p>July 20, 2021</p>
+                </div>
               </div>
-            </div>
-            <div class="container-blog">
-              <img src="assets/img/Room/SingleRoom.jpg" alt="" />
-              <div class="container-blog-item">
-                <h4>Travel with us this year</h4>
-                <p>July 20, 2021</p>
+              <div class="container-blog">
+                <img src="assets/img/Room/SingleRoom.jpg" alt="" />
+                <div class="container-blog-item">
+                  <h4>Travel with us this year</h4>
+                  <p>July 20, 2021</p>
+                </div>
               </div>
             </div>
           </div>
