Fix sideNav bug

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     <!-- Begin: side navigation -->
     <div class="expand-side-nav">
       <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn">&times;</a>
         <a href="index.html">Home</a>
         <a href="#aboutUs">About</a>
         <a href="pages/reserve.html#bk-st">Reservation</a>
       </div>
-      <span class="drawer" style="font-size: 30px; cursor: pointer" onclick="openNav()">&#9776;
+      <span class="drawer" style="font-size: 30px; cursor: pointer">&#9776;
       </span>
     </div>
     <!-- End: side navigation -->
