--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -58,23 +58,8 @@
         <a href="../index.html#aboutUs">About</a>
         <a href="#bk-st">Reservation</a>
       </div>
-      <span class="drawer" style="font-size: 30px; cursor: pointer" onclick="openNav()">&#9776;
+      <span class="drawer" style="font-size: 30px; cursor: pointer">&#9776;
       </span>
-
-      <script>
-        function openNav() {
-          document.getElementById("mySidenav").style.width = "55%";
-          document.getElementById("mySidenav").style.zIndex = "3";
-
-          document.getElementById("transparent-modal").classList.add("tpr-modal");
-
-        }
-
-        function closeNav() {
-          document.getElementById("mySidenav").style.width = "0";
-          document.getElementById("transparent-modal").classList.remove("tpr-modal");
-        }
-      </script>
     </div>
     <!-- End: side navigation -->
 
