change this is description

--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -92,8 +92,23 @@ Oval rental
               <img src="../assets/img/Room/vipRoom.jpg" alt="Vip Room">
               <div class="room-desc pd16">
                 <h5 class="room-desc-header">Vip Room</h5>
-                <div class="room-desc-content">This is description. This is description. This is description. This is
-                  description.</div>
+                <div class="room-desc-content col-12 col-lg-12">
+                  <p class="description">
+                    <b style="text-transform: uppercase">View:</b> Waterfront
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Size:</b> 63 sqm/678
+                    sqft
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Occupancy:</b>
+                    Sleeps 3
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Bedding:</b>1 King
+                    Bed
+                  </p>
+                </div>
                 <div class="icon mgtb32">
                   <i class="fa-solid fa-wifi"></i>
                   <i class="fa-solid fa-tv"></i>
@@ -109,8 +124,23 @@ Oval rental
               <img src="../assets/img/Room/doubleRoom.jpg" alt="Double Room">
               <div class="room-desc pd16">
                 <h5 class="room-desc-header">Double Room</h5>
-                <div class="room-desc-content">This is description. This is description. This is description. This is
-                  description.</div>
+                <div class="room-desc-content col-12 col-lg-12">
+                  <p class="description">
+                    <b style="text-transform: uppercase">View:</b> Waterfront
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Size:</b> 63 sqm/678
+                    sqft
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Occupancy:</b> Sleeps
+                    4
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Bedding:</b> 2 Queen
+                    Beds
+                  </p>
+                </div>
                 <div class="icon mgtb32">
                   <i class="fa-solid fa-wifi"></i>
                   <i class="fa-solid fa-tv"></i>
@@ -126,8 +156,23 @@ Oval rental
               <img src="../assets/img/Room/SingleRoom.jpg" alt="Single Room">
               <div class="room-desc pd16">
                 <h5 class="room-desc-header">Single Room</h5>
-                <div class="room-desc-content">This is description. This is description. This is description. This is
-                  description.</div>
+                <div class="room-desc-content col-12 col-lg-12">
+                  <p class="description">
+                    <b style="text-transform: uppercase">View:</b> City
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Size:</b> 63 sqm/248
+                    sqft
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Occupancy:</b>
+                    Sleeps 1
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Bedding:</b> 1 Single
+                    Bed
+                  </p>
+                </div>
                 <div class="icon mgtb32">
                   <i class="fa-solid fa-wifi"></i>
                   <i class="fa-solid fa-tv"></i>
@@ -142,8 +187,23 @@ Oval rental
               <img src="../assets/img/Room/affordableRoom.jpg" alt="Affordable Room">
               <div class="room-desc pd16">
                 <h5 class="room-desc-header">Affordable Room</h5>
-                <div class="room-desc-content">This is description. This is description. This is description. This is
-                  description.</div>
+                <div class="room-desc-content col-12 col-lg-12">
+                  <p class="description">
+                    <b style="text-transform: uppercase">View:</b> Mountain
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Size:</b> 63 sqm/678
+                    sqft
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Occupancy:</b>
+                    Sleeps 2
+                  </p>
+                  <p class="description">
+                    <b style="text-transform: uppercase">Bedding:</b>1 Queen
+                    Bed
+                  </p>
+                </div>
                 <div class="icon mgtb32">
                   <i class="fa-solid fa-wifi"></i>
                   <i class="fa-solid fa-tv"></i>
