--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
     <div id="main">
       <!-- Begin: header -->
       <div id="header">
+        <nav>
+          <img
+            src="./assets/img/favicon/icons8-hotel-star-64.png"
+            alt=""
+            class="attach-logo"
+          />
+        </nav>
         <!--Begin: title -->
         <div class="main-title"><a href="index.html">Oval rental</a></div>
         <!-- End: title -->
@@ -81,14 +88,19 @@
 
       <!-- Begin: banner -->
       <div id="banner">
+        <div class="attach-video">
+          <video autoplay loop muted width="100%" height="100%">
+            <source
+              src="./assets/img/Banner/banner-video.mp4"
+              type="video/mp4"
+            />
+          </video>
+        </div>
         <div class="text-content">
-          <h1 class="text-heading">Discover</h1>
-          <pre class="text-subheading">
-the world
-with
-Oval rental
-        </pre
-          >
+          <h1 class="text-heading">Oval rental</h1>
+          <div class="btn-discover">
+            <a href="" class="get-explore">Explore</a>
+          </div>
         </div>
       </div>
       <!-- End: banner -->
