--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -24,6 +24,13 @@
     <!-- Begin: header -->
     <div id="header">
       <!--Begin: title -->
+      <nav>
+        <img
+          src="../assets/img/favicon/icons8-hotel-star-64.png"
+          alt=""
+          class="attach-logo"
+        />
+      </nav>
       <div class="main-title"><a href="../index.html">Oval rental</a></div>
       <!-- End: title -->
       <!-- Begining a list -->
@@ -65,13 +72,19 @@
 
     <!-- Begin: banner -->
     <div id="banner">
+      <div class="attach-video">
+        <video autoplay loop muted width="100%" height="100%">
+          <source
+            src="../assets/img/Banner/banner-video.mp4"
+            type="video/mp4"
+          />
+        </video>
+      </div>
       <div class="text-content">
-        <h1 class="text-heading">Discover</h1>
-        <pre class="text-subheading">
-the world
-with
-Oval rental
-        </pre>
+        <h1 class="text-heading">Oval rental</h1>
+        <div class="btn-discover">
+          <a href="" class="get-explore">Explore</a>
+        </div>
       </div>
     </div>
     <!-- End: banner -->
