Fix navigation bug

--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -24,13 +24,6 @@
     <!-- Begin: header -->
     <div id="header">
       <!--Begin: title -->
-      <nav>
-        <img
-          src="../assets/img/favicon/icons8-hotel-star-64.png"
-          alt=""
-          class="attach-logo"
-        />
-      </nav>
       <div class="main-title"><a href="../index.html">Oval rental</a></div>
       <!-- End: title -->
       <!-- Begining a list -->
@@ -71,22 +64,18 @@
     <!-- End: side navigation -->
 
     <!-- Begin: banner -->
-    <div id="banner">
-      <div class="attach-video">
-        <video autoplay loop muted width="100%" height="100%">
-          <source
-            src="../assets/img/Banner/banner-video.mp4"
-            type="video/mp4"
-          />
-        </video>
-      </div>
+    <!-- Begin: banner -->
+    <div id="rs-banner">
       <div class="text-content">
-        <h1 class="text-heading">Oval rental</h1>
-        <div class="btn-discover">
-          <a href="" class="get-explore">Explore</a>
-        </div>
+        <h1 class="text-heading">Discover</h1>
+        <pre class="text-subheading">
+the world
+with
+Oval rental
+        </pre>
       </div>
     </div>
+    <!-- End: banner -->
     <!-- End: banner -->
 
     <div id="content">
@@ -179,7 +168,7 @@
                   </p>
                   <p class="description">
                     <b style="text-transform: uppercase">Occupancy:</b>
-                    Sleeps 1
+                    Sleep 1
                   </p>
                   <p class="description">
                     <b style="text-transform: uppercase">Bedding:</b> 1 Single
