update respon and footer

--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
           </div>
         </div>
       </div>
+
       <!-- End:content -->
       <p class="embedded-map">
         <iframe class="map-frame"
@@ -351,6 +352,8 @@
       </p>
     </div>
     <!-- End:content -->
+
+    <!-- Footer -->
     <div id="footer">
       <div class="container">
         <div class="row rps_footer">
@@ -441,7 +444,7 @@
             </div>
             <div class="container-contact-info">
               <i class="bi bi-telephone"></i>
-              <span> 0828807783 </span>
+              <span> +84 945 999 917 </span>
             </div>
             <div class="container-contact-info">
               <i class="bi bi-envelope"></i>
@@ -453,8 +456,12 @@
             </div>
           </div>
         </div>
+        <span class="copyright"> Copyright © 2022 By
+          <a href="https://www.facebook.com/long.phamkhanh.710"> Team_5</a>
+        </span>
       </div>
     </div>
+    <!-- End: Footer -->
 
     <!-- Modal -->
     <div id="modal">
@@ -523,5 +530,4 @@
   <script type="module" src="assets/js/indexScript.js"></script>
   <!-- End: main -->
 </body>
-
 </html>
